# Polymarket-Bot

./: .env.example  .gitignore  All about.md  Dockerfile  Handoff.md  Procfile  README.md  alembic.ini  all about  docker-compose.yml  edits.md  main.py  pyproject.toml  research.md  setup.py  start.ps1  start.py  strategy.md
.github/workflows/: ci.yml
bot/: __init__.py  config.py  main.py  models.py  modes.py
bot/api/: broadcast.py  dashboard.html  server.py  state.py  ws.py
bot/api/routes/: kill_switch.py  leaders.py  positions.py  settings.py  state.py
bot/clob/: client.py  orders.py  ws_market.py  ws_user.py
bot/copy_planner/: __init__.py  bankroll.py  conflicts.py  planner.py  portfolio_sizer.py
bot/data/: __init__.py  client.py  coingecko.py  coordinator.py  data_api.py  gamma.py  polygon_logs.py  rate_limit.py  subgraphs.py
bot/discovery/: antigaming.py  candidates.py  filters.py  job.py  roster.py  scoring.py
bot/engine/: __init__.py  aggregator.py  conflicts.py  executor.py  exits.py  recovery.py  redeem.py  router.py  runner.py  signals.py  sizer.py  status.py
bot/exec/: base.py  clob_book.py  executor.py  live.py  paper.py
bot/ingest/: chain_listener.py
bot/leader_ranker/: __init__.py  clusters.py  filters.py  pipeline.py  scheduler.py  scoring.py
bot/ledger/: __init__.py  db.py  repo.py  schema.sql  schemas.sql
bot/observability/: log.py  metrics.py  trace.py
bot/paper/: book_cache.py  fill_engine.py
bot/portfolio/: mtm.py
bot/risk_engine/: caps.py
bot/scripts/: bootstrap.py  derive_proxy.py  dump_roster.py  set_allowances.py
bot/security/: allowances.py  keystore.py
config/: secrets.py  settings.py  validators.py
dashboard/: package.json  pnpm-lock.yaml
dashboard/app/: globals.css  layout.tsx  page.tsx  providers.tsx
dashboard/app/analytics/: page.tsx
dashboard/components/: sidebar.tsx  stat-card.tsx
dashboard/lib/: api.ts  ws.ts
scripts/: health_check.py  reset_paper.py  seed_db.py  smoke_discovery.py  status_check.py  test_discovery.py  wipe_paper_now.py
src/: runner.py
src/api/: deps.py  main.py  websocket.py
src/cli/: main.py
src/core/: clock.py  enums.py  exceptions.py  models.py
src/data/: cache.py  clob_websocket.py  polymarket_client.py  rate_limiter.py
src/db/: engine.py  models.py  repositories.py
src/execution/: dedup.py  filters.py  order_engine.py  paper_fill.py  poller.py  queue.py  signal_normalizer.py  sizer.py
src/funnel/: orchestrator.py  stage_a_candidates.py  stage_b_disqualifiers.py  stage_c_scoring.py  stage_d_ranking.py  stage_e_shadow.py  stage_f_active.py
src/metrics/: capture_ratio.py  clustering.py  composite_score.py  consistency.py  conviction.py  counter_trade.py  crowding.py  domain_score.py  entropy.py  hold_to_resolution.py  insider.py  profit_factor.py  slippage_estimator.py  win_rate.py
src/notifications/: alerts.py  discord.py  ntfy.py
src/positions/: exiter.py  pricer.py  reconciler.py  tracker.py
src/risk/: caps.py  circuit_breakers.py  killswitch.py
tests/: conftest.py  test_antigaming.py  test_filters.py  test_paper_fill.py  test_scoring.py  test_sizer.py
tests/fixtures/: activity_sample.json  leaderboard_sample.json
tests/integration/: test_exiter.py  test_order_engine.py
tests/unit/: test_capture_ratio.py  test_circuit_breakers.py  test_filters.py  test_scoring.py  test_sizer.py  test_state_machines.py
thinking/session-logs/: session_auto_20260524_124221.jsonl  session_auto_20260524_162524.jsonl  session_auto_20260524_195120.jsonl  session_auto_20260524_202520.jsonl
web/: index.html
(+14 files in other folders)
