[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Polymarket copy-trading bot — paper + live, full stack"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "websockets>=13.0",
    "gql[aiohttp]>=3.5.0",
    "web3>=7.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "duckdb>=1.1.0",
    "tenacity>=9.0.0",
    "keyring>=25.4.0",
    "eth-account>=0.13.0",
    "honcho>=2.0.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.9",
    "python-dateutil>=2.9.0",
    # Polymarket V2 SDK — install from GitHub if not on PyPI:
    # uv pip install "py-clob-client-v2 @ git+https://github.com/Polymarket/py-clob-client-v2"
    # Or comment out and install manually: pip install py-clob-client-v2
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx[test]>=0.27.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
polymarket-bot = "bot.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]
