[project]
name = "polymarket-copy-trader"
version = "0.2.0"
description = "Polymarket copy trader — paper and live share one execution path"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20.0",
  "certifi>=2024.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "py-clob-client>=0.34.0",
  "pydantic-settings>=2.6.0",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.32.0",
  "websockets>=13.0",
]

[project.optional-dependencies]
chain = ["web3>=7.0.0"]

[project.scripts]
copybot = "bot.main:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]
